--- a/app/globals.css
+++ b/app/globals.css
@@ -25,4 +25,8 @@ body {
     @apply flex flex-col justify-center items-center w-[400px] shadow-2xl
     shadow-slate-500 px-8 py-4  rounded-md gap-4;
   }
+
+  .card-center {
+    @apply flex flex-row flex-wrap gap-8 justify-center items-center my-12;
+  }
 }
